--- a/scrollProject/styles.css
+++ b/scrollProject/styles.css
@@ -293,7 +293,7 @@ nav {
 header {
   min-height: 100vh;
   background: linear-gradient(rgba(63, 208, 212, 0.5), rgba(0, 0, 0, 0.7)),
-    url(./hero-bcg.jpeg) center/cover no-repeat;
+    url(./image.jpg) center/cover no-repeat;
 }
 .banner {
   min-height: 100vh;
